--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -103,7 +103,7 @@ label {
 } */
 
 .monaco-editor .lines-content.monaco-editor-background {
-  margin-left: 8px;
+  margin-left: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
